--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 /Task_2/[Ll]ibrary/
 /Task_3/[Ll]ibrary/
 /Task_3/[Tt]emp/
+/Task_4/[Ll]ibrary/
+/Task_4/[Tt]emp/
+Task_4/Assets/TextMesh Pro/
 /[Oo]bj/
 /[Bb]uild/
 /[Bb]uilds/
